MODORDERS-587 Corrections for piece creation for non-package P/E mixed order line (#528)
* MODORDERS-587 Corrections for piece creation for non-package P/E mixed order line

Co-authored-by: Dzmitry_Butramyou <dzmitry_butramyou@epam.com>

(cherry picked from commit 7bb30c58c32f86dcc01b926fe18fedee5ebd290b)